# iast-converter

./: DEPLOYMENT_README.md  Dockerfile  README.md  git-init.sh  git-push.sh  package.json  pnpm-lock.yaml  restart.sh  tsconfig.json
.github/workflows/: deploy.yml  macos-tauri.yml
docker/: nginx.conf
src/: cli.ts  converter.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: index.html  tsconfig.json  vite.config.ts
web/src/: App.tsx  app.css  index.css
