[package]
name = "iast-converter"
version = "0.6.0"
description = "A Tauri App for converting IAST to Russian diacritics"
authors = ["you"]
license = ""
repository = ""
default-run = "iast-converter"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "clipboard-all", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ] 